<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/notification"
        android:title="@string/notification"/>

    <item
        android:id="@+id/nav_plus"
        android:icon="@drawable/plus"
        android:title="@string/empty"
        />

    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/schedule"
        android:title="@string/schedule"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>



</menu>