<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:theme="@style/AppTheme"
    tools:context=".activity_login"
    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="269dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="-18.5sp"
        android:text="@string/splash_title"
        android:textAlignment="gravity"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="361dp"
        android:layout_height="54dp"
        android:background="@drawable/inputbox_rounded"
        android:drawableStart="@drawable/email"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="361dp"
        android:layout_height="54dp"
        android:background="@drawable/inputbox_rounded"
        android:drawableStart="@drawable/password"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/btn_login_signup"
        android:layout_width="302dp"
        android:layout_height="63dp"
        android:onClick="btnsignupfromlogin"
        android:background="@drawable/btn_transparent"
        android:text="@string/btn_signup_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

    <Button
        android:id="@+id/btn_completelogin"
        android:layout_width="302dp"
        android:layout_height="63dp"
        android:background="@drawable/btn_white"
        android:onClick="btnLoginClick"
        android:text="@string/btn_login_text"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />


</androidx.constraintlayout.widget.ConstraintLayout>